dumb_source = [
  'src/it/itorder.c',
  'src/it/xmeffect.c',
  'src/it/itrender.c',
  'src/it/itread2.c',
  'src/it/itunload.c',
  'src/it/loadmod.c',
  'src/it/loads3m.c',
  'src/it/loadxm2.c',
  'src/it/itload2.c',
  'src/it/readmod2.c',
  'src/it/reads3m2.c',
  'src/it/loadmod2.c',
  'src/it/loadxm.c',
  'src/it/loads3m2.c',
  'src/it/itload.c',
  'src/it/itmisc.c',
  'src/it/itread.c',
  'src/it/readxm.c',
  'src/it/readmod.c',
  'src/it/reads3m.c',
  'src/it/readxm2.c',
  'src/it/load669.c',
  'src/it/load6692.c',
  'src/it/loadamf.c',
  'src/it/loadamf2.c',
  'src/it/loadany.c',
  'src/it/loadany2.c',
  'src/it/loadasy.c',
  'src/it/loadasy2.c',
  'src/it/loadmtm.c',
  'src/it/loadmtm2.c',
  'src/it/loadokt.c',
  'src/it/loadokt2.c',
  'src/it/loadoldpsm.c',
  'src/it/loadoldpsm2.c',
  'src/it/loadpsm.c',
  'src/it/loadpsm2.c',
  'src/it/loadptm.c',
  'src/it/loadptm2.c',
  'src/it/loadriff.c',
  'src/it/loadriff2.c',
  'src/it/loadstm.c',
  'src/it/loadstm2.c',
  'src/it/ptmeffect.c',
  'src/it/read669.c',
  'src/it/read6692.c',
  'src/it/readam.c',
  'src/it/readamf.c',
  'src/it/readamf2.c',
  'src/it/readany.c',
  'src/it/readany2.c',
  'src/it/readasy.c',
  'src/it/readdsmf.c',
  'src/it/readmtm.c',
  'src/it/readokt.c',
  'src/it/readokt2.c',
  'src/it/readoldpsm.c',
  'src/it/readpsm.c',
  'src/it/readptm.c',
  'src/it/readriff.c',
  'src/it/readstm.c',
  'src/it/readstm2.c',
  'src/core/makeduh.c',
  'src/core/unload.c',
  'src/core/loadduh.c',
  'src/core/rawsig.c',
  'src/core/rendduh.c',
  'src/core/rendsig.c',
  'src/core/duhlen.c',
  'src/core/duhtag.c',
  'src/core/atexit.c',
  'src/core/readduh.c',
  'src/core/register.c',
  'src/core/dumbfile.c',
  'src/helpers/sampbuf.c',
  'src/helpers/stdfile.c',
  'src/helpers/clickrem.c',
  'src/helpers/silence.c',
  'src/helpers/memfile.c',
  'src/helpers/resample.c',
  'src/helpers/barray.c',
  'src/helpers/lpc.c',
  'src/helpers/resampler.c',
  'src/helpers/riff.c',
  'src/helpers/tarray.c',
]

dumb_includes = include_directories('./include')

dumb_library = static_library('dumb', dumb_source,
  include_directories: [includes, dumb_includes],
  dependencies: [zlib_dependency],
  c_args: ['-w']
  )
